# maridb

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  wrangler.toml
dashboard/: dashboard.js  dev-serve.sh  index.html
docs/: backtracking-runbook.md  cost-scaling.md  field-investigation.md  index.md  osint-workflow-design.md  pipeline-operations.md  pipeline.md  precision-improvement-plan.md  r2-buckets.md  r2-data-layout.md  ref-analytics-overview.md  ref-backtesting.md  ref-evaluation-metrics.md  ref-osint-workflow.md  ref-pipeline-catalog.md  ref-precision-plan.md  ref-prelabel-governance.md  ref-r2-buckets.md  ref-r2-data-layout.md  ref-scoring-model.md  ref-study-guide.md  ref-triage-governance.md  regional-playbooks.md  scoring-model.md  shadow-fleet-osint-playbook.md  sop.md  study-guide.md  trial-specification.md
scripts/: ais_rotate.py  build_public_sanctions_demo_sample.py  checkpoint_ducklake.py  generate_osint_report.py  gfw_ingest.py  install_launchagents.sh  notify_ais_validation.py  notify_metrics.py  osint_watchlist_check.py  prepare_public_sanctions_db.py  print_lead_time_report.py  push_metrics_snapshot.py  run_backtracking.py  run_pipeline.py  run_prelabel_evaluation.py  run_public_backtest_batch.py  run_review_feedback_evaluation.py  seed_demo_causal_effects.py  sync_r2.py  validate_ais_upload.py  validate_lead_time_ofac.py
tests/: conftest.py  test_ais_behavior.py  test_ais_csv.py  test_ais_rotate.py  test_ais_stream.py  test_backtest.py  test_backtest_input_validation.py  test_backtracking_runner.py  test_gdelt.py  (+34 more)
(+63 files in other folders)
