[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maridb"
version = "0.1.0"
description = "Maritime data layer — vessel, voyage, cargo, and AIS ingestion and transformation pipelines"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "polars>=1.0",
    "pyarrow>=17.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "h3>=3.7",
    "lancedb>=0.9",
    "pytz>=2026.1.post1",
    "lance-graph>=0.5.4",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipelines", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: opt-in integration tests requiring external/public data",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E741"]
